--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Avançada</title>
+    <title>Calculadora Simples</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="init()">
+<body>
     <div class="calculator">
-        <input type="text" class="display" id="display" disabled>
+        <input type="text" id="display" class="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
-            <button onclick="appendToDisplay('**')">^</button>
-            <button onclick="appendToDisplay('Math.sqrt(')">√</button>
-            <button class="operator" onclick="appendToDisplay('/')">/</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
-            <button class="operator" onclick="appendToDisplay('*')">*</button>
+            <button class="operator" onclick="appendToDisplay('+')">+</button>
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
@@ -25,10 +22,11 @@
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button class="operator" onclick="appendToDisplay('+')">+</button>
+            <button class="operator" onclick="appendToDisplay('*')">*</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
+            <button class="operator" onclick="appendToDisplay('/')">/</button>
         </div>
     </div>
     <script src="script.js"></script>
