--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Simples</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
@@ -29,6 +29,6 @@
             <button class="operator" onclick="appendToDisplay('/')">/</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="java.js"></script>
 </body>
 </html>
