--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" class="display" id="display" disabled>
+        <input type="text" id="display" class="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
-            <button onclick="appendToDisplay('^')">^</button>
-            <button onclick="appendToDisplay('sqrt(')">√</button>
+            <button onclick="deleteLast()">⌫</button>
+            <button onclick="appendToDisplay('%')">%</button>
             <button class="operator" onclick="appendToDisplay('/')">/</button>
+
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
             <button class="operator" onclick="appendToDisplay('*')">*</button>
+
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
             <button class="operator" onclick="appendToDisplay('-')">-</button>
+
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
             <button class="operator" onclick="appendToDisplay('+')">+</button>
+
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculate()">=</button>
+            <button onclick="appendToDisplay('Math.sqrt(')">√</button>
+            <button class="equal" onclick="calculate()">=</button>
         </div>
     </div>
     <script src="java.js"></script>
