--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="img.png" alt="">
+  <img ="img.png" alt="" class="img">
     <div class="container">
         <h1>Contador de Cliques</h1>
         <p>Cliques: <span id="click-count">0</span></p>
